@@ -2,6 +2,10 @@ Revision history for Perl extension Coro.
 
 0.53
 	- some tests for Event.
+        - slightly different internal architecture to get refcnt into the object
+          and not the reference. might fix a few bugs, certainly did introduce
+          new ones.
+        - Coro::Timer (independent of Event).
 
 0.52 Tue Nov  6 21:36:18 CET 2001
 	- ported to cygwin (trivial).
